# vault

./: .gitignore  Dockerfile  design.md  docker-compose.yaml  pyproject.toml  readme.md
apps/agent/: go.mod  readme.md
apps/cronus/: go.mod  main.go
apps/cronus/config/: settings.go
apps/harness/: go.mod  main.go
apps/harness/api/: api.go
apps/harness/cache/: cache.go
apps/json2sql/: main.py
apps/json2sql/data/: test.json
apps/server_status/: pyproject.toml  server_status.dockerfile
apps/server_status/data/: nodes.json  persist.jsonl
apps/server_status/server_status/: __init__.py
apps/server_status/server_status/config/: app_conf.py  gunicorn.conf.py
apps/server_status/server_status/models/: __init__.py  nodes.py
apps/vault/: vault.dockerfile
apps/vault/vault/routes/: __init__.py
p3vaildev/: p3vaildev.dockerfile  pyproject.toml
p3vaildev/data/: persist.jsonl  servers.json  users.json
p3vaildev/p3vaildev/: __init__.py
p3vaildev/p3vaildev/config/: app_conf.py  gunicorn.conf.py
p3vaildev/p3vaildev/models/: __init__.py  nodes.py  users.py
p3vaildev/p3vaildev/routes/: home.py
p3vaildev/p3vaildev/templates/: base.html  index.html
scripts/: docker_install.sh  fpm_install.sh
vault/: __init__.py  vault.dockerfile
vault/config/: app_conf.py  gunicorn.conf.py
vault/config/data_files/: categories.json  games.jsonl  hardware.jsonl  mileage.jsonl  software.jsonl
vault/models/: __init__.py  model.py
vault/routes/: category.py  home.py
vault/templates/: base.html  category.html  index.html
vault/vault/models/: __init__.py  model.py
(+9 files in other folders)
